# partner-games-ev-simulator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.githooks/: pre-commit
config/: config.example.yaml  default_sim.yaml
docs/: AVEVA_ADAPTER_EXAMPLES.md
examples/: adapter-for-mqtt.generic.example.json
scripts/: check_secrets.py
src/simulator/: main.py
src/simulator/core/: engine.py
src/simulator/models/: base.py  charging_site.py  ev_charger.py  pump.py  sump_station.py
src/simulator/utils/: config_parser.py  state.py
src/simulator/writers/: base.py  csv_writer.py  jsonl_writer.py  mqtt_writer.py  omf_writer.py  sensor_csv_writer.py
tests/: test_config_parser.py  test_engine.py  test_ev_charger.py  test_jsonl_writer.py  test_mqtt_writer.py  test_omf_writer.py  test_secret_check.py  test_state_persistence.py
